[package]
name = "tic-tac-toe-game"
version = "0.1.0"
authors = ["Jianan Sun <isunjn@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple terminal tic-tac-toe game written in rust"
readme = "README.md"
repository = "https://github.com/isunjn/tic-tac-toe"
keywords = ["tic-tac-toe", "terminal-game"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"

[[bin]]
name = "ttt"
path = "src/main.rs"